swagger corrected, image endpoint with responseentity
